--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 
 <body>
-    <h1> Hello World, I'm Janisa  </h1>
+    <div> 
+        <h1>Hello World, I'm Janisa </h1> 
 
-    <p>My class is awesome, yes they are! testing 123</p>
+        <p>My class is awesome, yes they are! testing 123</p>
 
+        <p>My class is awesome, yes they are! testing 123</p>
+    </div>   
 
 
     
