--- a/index.html
+++ b/index.html
@@ -5,67 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-<style> 
-
-    h1 {color:crimson;
-        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        font-style: italic;
-        font-size:40px;
-        text-align: center;
-    }
-    img {height:200px;
-        border: 4px solid teal;
-        border-radius: 30px 5px 20px 1px;
-    }
-
-    h2  {color:pink  
-    }
-
-    p {background-color: darkkhaki;}
-
-    ul {list-style-type: georgian;}
-
-    body {background-color:skyblue; }
-
-
-
-
-
-
-
-</style>
-
-
-
-
-
 </head>
-
 <body>
-    <div> 
-        <h1>Hello World, I'm Janisa </h1>
-        <h2>I am a heading tooo </h2>  
+    <h1> Classroom Activities</h1>
 
-        <p>My class is awesome, yes they are! testing 123</p>
+    <h2> 17.1</h2>
+    <p><a href="17.1-activities/index.html"> Hello World   </a> </p>
 
-        <p>My class is awesome, yes they are! testing 123</p>
-
-        <a href="https://www.google.com/">Go to Google</a>
-
-        <img src="pexels-alina-blumberg-5594295.jpg" >
-
-        <ul> 
-            <li>point 1</li>
-            <li>point 2</li>
-            <li>point 3</li>
-
-        </ul>
+    <h2>17.2 </h2>
 
 
-    </div>   
+
+    <h2>17.3 </h2>
 
 
-    
+
+
 </body>
 </html>
