--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
 
     <h2>17.2 </h2>
 
+    <p><a href="17.2-activities/01_Containers_Structure/unsolved/index.html"> USPS  </a> </p>
 
 
     <h2>17.3 </h2>
+    <p><a href="17.3_activities/01_Positioning_Elements/1_floats/unsolved/index.html">Floats</a> </p>
+    <p><a href="17.3_activities/02_Positioning_Relative_Absolute/unsolved/index.html">Relative Absolute</a> </p>
+    <p><a href="17.3_activities/favorite_pet_gecko/index.html">Gecko </a> </p>
 
-
+    <h2> 18.1 </h2>
+    
 
 
 </body>
