--- a/18.1-activities/01_Your_First_Flex_Layout/unsolved/index.html
+++ b/18.1-activities/01_Your_First_Flex_Layout/unsolved/index.html
@@ -7,9 +7,30 @@
 
   <div id="column" class="flex"><!-- This div has the id of column and the class of flex. -->
 
+    <div class="flex_item"> 
+      This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!
+    </div>
+    <div class="flex_item"> 
+      This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!
+    </div>
+    <div class="flex_item"> 
+      This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!
+    </div>
+
+
+
   </div>
 
   <div id="row" class="flex">
+    <div class="flex_item"> 
+      This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!
+    </div>
+    <div class="flex_item"> 
+      This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!
+    </div>
+    <div class="flex_item"> 
+      This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!This is an item. yes it is!
+    </div>
 
 
   </div>
