--- a/18.1-activities/02_Sizing_With_Flex_Items/unsolved/index.html
+++ b/18.1-activities/02_Sizing_With_Flex_Items/unsolved/index.html
@@ -24,12 +24,19 @@
     </div>
     <div class="flexItem">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
     </div>
+
+
   </section>
     <section class="perfectlyCentered flexContainer">
-      <div class="flexItem">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      <div class="flexItem myItems">
+        <p> Item 1 </p>
+        <p> Item 2 </p>
+        <p> Item 3 </p>
+      
+      </div>
     </section>
-  </div>
+  
 </body>
 </html>
