--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <p><a href="17.3_activities/favorite_pet_gecko/index.html">Gecko </a> </p>
 
     <h2> 18.1 </h2>
-    
+    <p><a href="18.1-activities/01_Your_First_Flex_Layout/unsolved/index.html">First Flex Layout</a></p>
+    <p><a href="18.1-activities/02_Sizing_With_Flex_Items/unsolved/index.html">Flex-items alignment</a></p>
+    <p><a href="18.1-activities/03_Jakes_Eatery/unsolved/index.html">Jake's Eatery</a></p>
 
 
 </body>
