--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <h2>17.3 </h2>
     <p><a href="17.3_activities/01_Positioning_Elements/1_floats/unsolved/index.html">Floats</a> </p>
+    <p> <a href="17.3_activities/01_Positioning_Elements/2_block_and_inline_elements/unsolved/index.html">block and inline</a></p>
+    <p> <a href="17.3_activities/01_Positioning_Elements/3_inline_block_elements/unsolved/index.html">inline-block</a></p>
     <p><a href="17.3_activities/02_Positioning_Relative_Absolute/unsolved/index.html">Relative Absolute</a> </p>
     <p><a href="17.3_activities/favorite_pet_gecko/index.html">Gecko </a> </p>
 
