--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
     <p><a href="18.1-activities/02_Sizing_With_Flex_Items/unsolved/index.html">Flex-items alignment</a></p>
     <p><a href="18.1-activities/03_Jakes_Eatery/unsolved/index.html">Jake's Eatery</a></p>
 
+    <h2> 18.2 </h2>
+    <p><a href="18.2-activities/unsolved/index.html">CSS Grids</a> </p>
+
+    <h2> 18.3 </h2>
+    <p><a href="18.3-activities/01_transforms/unsolved/index.html" >Transforms </a> </p>
+    <p> <a href="18.3-activities/02_transitions/unsolved/index.html">Transitions</a></p>
+    <p> <a href="18.3-activities/03_keyframes/unsolved/index.html">Keyframes</a></p>
+
 
 </body>
 </html>
