--- a/index.html
+++ b/index.html
@@ -38,5 +38,27 @@
     <p> <a href="18.3-activities/03_keyframes/unsolved/index.html">Keyframes</a></p>
 
 
+    <h2> 19.1 </h2>
+    <p><a href="19.1-activities/01_Hello_World_Again/unsolved/index.html">Hello World</a> </p>
+    <p><a href="19.1-activities/02_More_Variables/unsolved/index.html">Variables</a> </p>
+    <p><a href="19.1-activities/03_Using_jQuery/unsolved/index.html">jQuery</a> </p>
+    <p><a href="19.1-activities/04_on_function/unsolved/index.html">Functions</a> </p>
+    <p><a href="19.1-activities/05_Build_a_toggle/unsolved/index.html">Toggle</a> </p>
+
+    <h2>19.2</h2>
+    <p><a href="19.2-activities/01_Conditionals/index.html">Conditionals</a></p>
+    <p><a href="19.2-activities/02_theme_changer/unsolved/index.html">theme-change</a></p>
+    <p><a href="19.2-activities/03_todo_app/unsolved/index.html">Todo</a> </p>
+   
+   <h2> 19.3</h2>
+   
+    <p><a href="19.3-activities/unsolved/index.html">The Band</a> </p>
+
+    <h2>20.1</h2>
+
+    <p><a href="20.1-activities/Unsolved/index.html">Welcome to Bootstrap</a> </p>
+
+
+
 </body>
 </html>
